# rv-expedition-logbook

./: .gitignore  CHANGELOG.md  Makefile  PROJECT_CHARTER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CSV_IMPORT.md  DOMAIN_MODEL.md  DOMAIN_OBJECTS.md  END_TO_END_EXAMPLE.md  HTML_RENDERING.md  INGEST_WORKFLOWS.md  LIVE_TRIP_WORKFLOW.md  PROJECT_OVERVIEW.md  RENDERING.md  ROADMAP.md  RV_TRIP_WIZARD.md  TRIP_MERGE.md  VALIDATION.md
examples/: sample-binder-from-make.md  sample-expenses.csv  sample-fuel-stops-merge.json  sample-fuel-stops-single.csv  sample-fuel-stops.csv  sample-html-report.html  sample-ingested-trip.json  sample-rtw-export.json  sample-rtw-trip.json  sample-trip.json
rv_logbook/: __init__.py  __main__.py  domain.py  importers.py  live_trip.py  merge.py  render.py  render_html.py  rv_trip_wizard.py  schema.py  workflows.py
schemas/: campground.schema.json  expense.schema.json  fuel-stop.schema.json  maintenance-event.schema.json  provenance.schema.json  travel-day.schema.json  trip.schema.json
scripts/: render_binder.py  validate.py
skills/rv-expedition-logbook/: SKILL.md
templates/binder/: captain-log.md  cover.md  fuel-log.md  maintenance-log.md
tests/: test_binder_first_framing.py  test_ci_workflow.py  test_cli.py  test_csv_import.py  test_domain.py  test_ingest_csv.py  test_live_trip_workspace.py  test_merge_records.py  test_packaging.py  test_release_artifacts.py  test_render_binder.py  test_render_html.py  test_rv_trip_wizard.py  test_schema_validation.py  test_skill_assets.py  test_validate.py
(+6 files in other folders)
